--- a/gcc/config/ia64/ia64.md
+++ b/gcc/config/ia64/ia64.md
@@ -4429,11 +4429,15 @@
   [(const_int 0)]
 {
   rtx tmp;
+  int emitted_something;
+
+  emitted_something = 0;
   if (! rtx_equal_p (operands[0], operands[2]))
     {
       tmp = gen_rtx_SET (VOIDmode, operands[0], operands[2]);
       tmp = gen_rtx_COND_EXEC (VOIDmode, operands[4], tmp);
       emit_insn (tmp);
+      emitted_something = 1;
     }
   if (! rtx_equal_p (operands[0], operands[3]))
     {
@@ -4443,7 +4447,10 @@
 			       gen_rtx_SET (VOIDmode, operands[0],
 					    operands[3]));
       emit_insn (tmp);
+      emitted_something = 1;
     }
+  if (! emitted_something)
+    emit_note (NULL, NOTE_INSN_DELETED);
   DONE;
 })
 
