2002-06-11  David S. Miller  <davem@redhat.com>
	* emit-rtl.c (try_split): Do not abort on non-INSN_P.
	Only run RTX equality checks on INSN_P rtl.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@54502 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-06-11  David S. Miller  <davem@redhat.com>
+
+	* emit-rtl.c (try_split): Do not abort on non-INSN_P.
+	Only run RTX equality checks on INSN_P rtl.
+
 2002-06-11  Ulrich Weigand  <uweigand@de.ibm.com>
 
 	* config/s390/s390.md (reload_base, ltorg): Remove.
