--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,8 @@
+2002-06-09  Tom Tromey  <tromey@redhat.com>
+
+	* parse.y (method_header): Give error message in all cases.
+	Fixes PR java/6865.
+
 2002-06-10  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
 
 	Don't use RTL inlining. Fix for PR java/6820.
