* config/s390/s390.md (movsi): Only use floating point 	register alternatives when operands are already fprs. 	(movdi_31, movdi_64): Likewise.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@54506 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-06-11  Ulrich Weigand  <uweigand@de.ibm.com>
+
+	* config/s390/s390.md (movsi): Only use floating point
+	register alternatives when operands are already fprs.
+	(movdi_31, movdi_64): Likewise.
+
 2002-06-11  David S. Miller  <davem@redhat.com>
 
 	* emit-rtl.c (try_split): Do not abort on non-INSN_P.
