--- a/gcc/config/s390/s390.md
+++ b/gcc/config/s390/s390.md
@@ -947,8 +947,8 @@
    (set_attr "atype"   "mem")])
 
 (define_insn "*movdi_64"
-  [(set (match_operand:DI 0 "nonimmediate_operand" "=d,d,m,f,f,m")
-        (match_operand:DI 1 "general_operand" "d,m,d,f,m,f"))]
+  [(set (match_operand:DI 0 "nonimmediate_operand" "=d,d,m,!*f,!*f,!m")
+        (match_operand:DI 1 "general_operand" "d,m,d,*f,m,*f"))]
   "TARGET_64BIT"
   "@
    lgr\\t%0,%1
@@ -961,8 +961,8 @@
    (set_attr "atype"   "reg,mem,mem,reg,mem,mem")])
 
 (define_insn "*movdi_31"
-  [(set (match_operand:DI 0 "nonimmediate_operand" "=d,Q,d,m,f,f,m")
-        (match_operand:DI 1 "general_operand" "Q,d,dKm,d,f,m,f"))]
+  [(set (match_operand:DI 0 "nonimmediate_operand" "=d,Q,d,m,!*f,!*f,!m")
+        (match_operand:DI 1 "general_operand" "Q,d,dKm,d,*f,m,*f"))]
   "!TARGET_64BIT"
   "@
    lm\\t%0,%N0,%1
@@ -1100,8 +1100,8 @@
    (set_attr "atype"   "mem")])
 
 (define_insn "*movsi"
-  [(set (match_operand:SI 0 "nonimmediate_operand" "=d,d,m,f,f,m")
-        (match_operand:SI 1 "general_operand" "d,m,d,f,m,f"))]
+  [(set (match_operand:SI 0 "nonimmediate_operand" "=d,d,m,!*f,!*f,!m")
+        (match_operand:SI 1 "general_operand" "d,m,d,*f,m,*f"))]
   ""
   "@
    lr\\t%0,%1
