* mips.c (embedded_pic_fnaddr_reg): Fix typo.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@54509 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-06-11  Jeffrey Law <law@redhat.com
+
+	* mips.c (embedded_pic_fnaddr_reg): Fix typo.
+
 2002-06-11  Ulrich Weigand  <uweigand@de.ibm.com>
 
 	* config/s390/s390.md (movsi): Only use floating point
