--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,9 @@
+2002-06-10  Akim Demaille  <akim@epita.fr>
+
+	* parse.y (interface_type_list, class_member_declaration)
+	(unary_expression_not_plus_minus): Remove duplicate %type.
+	Whitespace changes.
+
 2002-06-09  Tom Tromey  <tromey@redhat.com>
 
 	* Make-lang.in (java/lang.o): Use LANGHOOKS_DEF_H.
