* mips.c (function_arg_advance): gen_ashldi3 returns an INSN now,         not the pattern.  So extract the pattern from the insn.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@54511 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,4 +1,7 @@
-2002-06-11  Jeffrey Law <law@redhat.com
+2002-06-11  Jeffrey Law <law@redhat.com>
+
+	* mips.c (function_arg_advance): gen_ashldi3 returns an INSN now,
+	not the pattern.  So extract the pattern from the insn.
 
 	* mips.c (embedded_pic_fnaddr_reg): Fix typo.
 
