--- a/gcc/config/i386/i386.md
+++ b/gcc/config/i386/i386.md
@@ -7881,7 +7881,7 @@
 	(and (match_dup 0)
 	     (const_int -65536)))
    (clobber (reg:CC 17))]
-  "optimize_size"
+  "optimize_size || (TARGET_FAST_PREFIX && !TARGET_PARTIAL_REG_STALL)"
   [(set (strict_low_part (match_dup 1)) (const_int 0))]
   "operands[1] = gen_lowpart (HImode, operands[0]);")
 
@@ -16334,7 +16334,8 @@
    (clobber (reg:CC 17))]
   "! TARGET_PARTIAL_REG_STALL && reload_completed
    && ((GET_MODE (operands[0]) == HImode 
-	&& (!optimize_size || GET_CODE (operands[2]) != CONST_INT
+	&& ((!optimize_size && !TARGET_FAST_PREFIX)
+	    || GET_CODE (operands[2]) != CONST_INT
 	    || CONST_OK_FOR_LETTER_P (INTVAL (operands[2]), 'K')))
        || (GET_MODE (operands[0]) == QImode 
 	   && (TARGET_PROMOTE_QImode || optimize_size)))"
