* Makefile.in (gccinstall.dvi): Pass absolute pathnames to 	$(TEXI2DVI) -o.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@54522 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-06-11  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>
+
+	* Makefile.in (gccinstall.dvi): Pass absolute pathnames to
+	$(TEXI2DVI) -o.
+
 Tue Jun 11 21:53:37 CEST 2002  Jan Hubicka  <jh@suse.cz>
 
 	* i386.c (x86_promote_QImode): Set for Athlon
