--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-06-11  Richard Henderson  <rth@redhat.com>
+
+	* defaults.h (EH_FRAME_SECTION_NAME): Don't define if 
+	DWARF2_UNWIND_INFO is false.
+
 2002-06-11  Bob Wilson  <bob.wilson@acm.org>
 
 	* config/xtensa/t-xtensa (LIBGCC1_TEST, CROSS_LIBGCC1): Delete.
