--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,9 @@
 2002-06-11  Richard Henderson  <rth@redhat.com>
 
+	* caller-save.c (init_caller_save): Clear INSN_CODE each iteration.
+
+2002-06-11  Richard Henderson  <rth@redhat.com>
+
 	* defaults.h (EH_FRAME_SECTION_NAME): Don't define if 
 	DWARF2_UNWIND_INFO is false.
 
