--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-06-11  Geoffrey Keating  <geoffk@redhat.com>
+
+	* config/rs6000/ppc-asm.h: Remove some Windows NT leftovers.
+
 2002-06-11  Richard Henderson  <rth@redhat.com>
 
 	* caller-save.c (init_caller_save): Clear INSN_CODE each iteration.
