--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -49,6 +49,9 @@ Tue Jun 11 21:53:37 CEST 2002  Jan Hubicka  <jh@suse.cz>
 
 2002-06-11  Jeffrey Law <law@redhat.com>
 
+	* caller-save.c (init_caller_save): Move creation of SAVEINSN
+	and RESTINSN into into the scope of the sequence.
+
 	* mips.c (mips_expand_prologue): Use emit_jump_insn for trivial
 	RETURN insns.
 
