--- a/gcc/f/ChangeLog
+++ b/gcc/f/ChangeLog
@@ -1,3 +1,7 @@
+2002-06-12  Gabriel Dos Reis  <gdr@codesourcery.com>
+
+	* bad.c (ffebad_start_): Adjust calls to diagnostic_count_error.
+
 2002-06-04  Gabriel Dos Reis  <gdr@codesourcery.com>
 
 	* bad.c (ffebad_start_): Adjust call to count_error.
