* doc/gty.texi: Small updates.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@54533 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-06-11  Geoffrey Keating  <geoffk@redhat.com>
+
+	* doc/gty.texi: Small updates.
+
 2002-06-12  Gabriel Dos Reis  <gdr@codesourcery.com>
 
 	* objc/objc-act.c (warn_with_ivar): Adjust calls to
