--- a/gcc/doc/gty.texi
+++ b/gcc/doc/gty.texi
@@ -229,11 +229,12 @@ things you need to do:
 @enumerate
 @item
 You need to add the file to the list of source files the type machinery
-scans.  For a back-end file, this is done automatically.  For a
-front-end file, this is done by adding the filename to the
-@code{gtfiles} variable defined in @file{config-lang.in}.  For other
-files, this is done by adding the filename to the @code{GTFILES} variable
-in @file{Makefile.in}.
+scans.  For a back-end file, this is usually done automatically; if not,
+you should add it to @code{config_gtfiles} in the appropriate port's
+entries in @file{config.gcc}.  For a front-end file, this is done by
+adding the filename to the @code{gtfiles} variable defined in
+@file{config-lang.in}.  For other files, this is done by adding the
+filename to the @code{GTFILES} variable in @file{Makefile.in}.
 
 @item
 You need to include the file that the type machinery will generate in
@@ -243,9 +244,9 @@ the source file you just changed.  The file will be called
 to mention this file as a dependency in the @file{Makefile}!
 
 @item
-Finally, you need to add a @file{Makefile} rule that will ensure this file
-can be built.  This is done by making it a dependency of @code{s-gtype},
-like this:
+Finally, you need to arrange to add a @file{Makefile} rule that will
+ensure this file can be built.  This is done by making it a dependency
+of @code{s-gtype}, like this:
 @verbatim
 gt-path.h : s-gtype ; @true
 @end verbatim
