--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-06-11  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* Makefile.in (CFLAGS_FOR_TARGET): Add -O2.
+
 2002-06-08  Jason Thorpe  <thorpej@wasabisystems.com>
 
 	* configure.in (vax-*-netbsd*): Re-enable gas.
